- Added configuration for ignoring squibbing for big cannon projectiles
- Added configuration for added recoil for big cannon projectiles
[Development] - Added registry events for cannon cast shapes
[Development] - Added support for projectiles with integrated propellant
Changes:
- Some new textures courtesy of Milkyfur and LopyLuna
 - Updated attributions
- Increased data sync rate for cannon drill to avoid laggy motion
- Create Big Cannons now uses an integrated mod jar for projectile syncing
- Projectiles now chunkload
 - Can be turned off in mod config
- Doubled power of Big Cartridge, Powder Charge
- Changed cannon plume profile
- Reduced particle count of Smoke Shell
- Changed big cannon munitions system to be more robust and allow for multiblock munitions
- Separated spread configuration for Powder Charge and Big Cartridge
- Changed casting time to a flat rate regardless of size based on fluid type or tag
 - Casting times are configurable via datapack
Fixes:
- Fixed Cannon Crafting Wand not boring autocannons
- Fixed Cannon Crafting Wand not properly connecting cannons
- Fixed cannons moving in irregular fashion on Cannon Carriage
- Fixed cannon cast getting stuck when encountering invalid recipes
- Fixed Big Cannon Layer crashing game when placed
- Fixed Cannon Carriage spawning ghost blocks
- Fixed Big Cannon Layer crashing game when blasted
- Fixed cannon shell smoke not displaying at far distances on client
- Fixed Quick-Firing Breech not displaying correctly when opening time is instant
- Fixed culling on Cannon Carriage
- Fixed layered cannon block casting progress being blocked by other processing blocks
- Fixed autocannon player turning issues
- Fixed Cannon Mount display issues
[Fabric] - Fixed cannon collision
[Fabric 1.20.1] - Fixed Cannon Carriage model not loading properly
[1.20.1] - Fixed mod tab crashing game
[1.20.1] - Fixed autocannon barrel not rendering properly
[1.20.1] - Fixed Cannon Cast block not rendering properly